# Vehicle-Classification

./: README.md  app.py  style.css
VehicleClassifier/: app.py  enhanced_vehicle_classifier.py  init_database.py  models.py  pyproject.toml  routes.py  simple_enhanced_classifier.py  utils.py  vehicle_classifier.py
VehicleClassifier/static/css/: style.css
VehicleClassifier/static/js/: main.js
VehicleClassifier/templates/: base.html  index.html  results.html
static/: style.css
templates/: index.html
